stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__parse_tests__vary_stack_depth_too_deep_checker.snap
---
source: stackslib/src/chainstate/tests/parse_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "3691208ff17840181846ed53fa3993eea1f8201f937be3b21f9a88ba64f6cb0b",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2e126555a390dec69a9ec12dad8d5cad16e0c8cd5ef662c2ae6ea181133363a2",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "aa71d22e514ca93b598fa0ad2cb2a22c26d2a1c1aa95cb4c2a5ab6fa16a3bea4",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a0e1afd31c6f8f0f38bb6a3bedcea48cf39f6601d060ab5f7dbbd16d9444ce16",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "af60aac78153947600591b130e4891dfdffdaf636c007b708bcfa6da2abdd9bf",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2285185d364a6c5c51d8c5770ee2514302cc0e9dd10810226745ef68ee840996",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "58c2e52e519c1a0d591a757a462082ce5b5f327007ead3da83d81724e72b95ef",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4f62d6a9182b700e61aa6bb48fb4f7bb805e2544447d60ace8f693f92e6d18c1",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "2a25a2fe3346374d0fbdf406fd945e8d1d0e4cfd1e8cc0778fbd976afcc18e93",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7193b1852bf85fc806227dcf085d196ce2ce418dd58239cb0ee4ad3d241f92e1",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ae04bfcf3498e102b680e4585b44bfa0bef50dc2325ed130da0b9fe4cc122986",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: my-contract-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: created a type which was deeper than maximum allowed type depth) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 142,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 21678,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 142,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 21678,
    ),
  )),
]
